Fix jar execution by using processbuilder